--- a/exampleconfig.json
+++ b/exampleconfig.json
@@ -1,7 +1,7 @@
 {
     "CommonFolders": "E:/WatermelonSalt",
 
-    "PathFromCommonFolder": [
+    "PathFromCommonFolders": [
         "",
         "/Apps",
         "/Github",
@@ -11,7 +11,7 @@
 
     "CommonIconsFolder": "E:/WatermelonSalt/Images/Icons",
 
-    "PathFromCommonIconsFolder": [
+    "PathFromCommonIconsFolders": [
         "Salt.ico",
         "Profile.ico",
         "Github.ico",
